--- a/imaterialise-api-csharp/imaterialise-api-csharp.csproj
+++ b/imaterialise-api-csharp/imaterialise-api-csharp.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="3DLabConnectionAPITest.cs" />
     <Compile Include="HttpClientExtensions.cs" />
     <Compile Include="Models\ErrorDto.cs" />
     <Compile Include="Models\ModelPricingRequestDto.cs" />
@@ -68,6 +69,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.10\tools\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.10\tools\Microsoft.Bcl.Build.targets')" />
